--- a/package.json
+++ b/package.json
@@ -75,8 +75,8 @@
     "lint-staged": "^8.2.1",
     "metro-react-native-babel-preset": "^0.54.1",
     "prettier": "^1.18.2",
-    "react": "16.8.6",
-    "react-native": "0.60.0-rc.2",
+    "react": "16.9.0",
+    "react-native": "0.61.5",
     "react-test-renderer": "16.8.6",
     "rimraf": "^2.6.3",
     "semantic-release": "15.13.16",
